# naff-site

./: .captain-definition  .dockerignore  .gitignore  backend.Dockerfile  docker-compose.yml  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
backend/: Cargo.toml  sqlx-data.json
backend/migrations/: 20221211024054_setup-db.sql  20221218080236_add_is_admin.sql  20221218094654_film-descript-name-defaults.sql  20221218125049_team_unique.sql
backend/src/: auth.rs  data.rs  error.rs  jwt_helpers.rs  main.rs
backend/src/api/: admin.rs  auth.rs  mod.rs  teams.rs
backend/src/db/: mod.rs
src/: app.html  global.scss  hooks.server.ts
src/lib/client/: api.ts  auth0.ts  stores.ts
src/lib/components/: A2.svelte  A3.svelte  Button.svelte  Footer.svelte  Header.svelte  Input.svelte  Login.svelte  Paragraph.svelte  Section.svelte  SectionHeader.svelte  User.svelte
src/lib/components/participate/: JoinTeam.svelte  TeamPage.svelte
src/lib/server/trpc/: index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/admin/: +page.server.ts  +page.svelte
src/routes/contact/: +page.svelte
src/routes/participate/: +page.server.ts  +page.svelte
src/routes/rules/: +page.svelte
