[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
dotenv = { version = "0.15.0" }
sqlx = { version = "0.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate",
], default-features = false }
tracing-actix-web = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
actix-web = "4"
thiserror = "1.0.37"
serde_json = "1.0.89"
rand = "0.8.5"
envy = "0.4.2"
reqwest = { version = "0.11.13", default-features = false, features = [
    "json",
    "rustls-tls",
] }
urlencoding = "2.1.2"
futures-util = "0.3.25"
actix-cors = "0.6.4"
